Show the images

--- a/wide-deep.ipynb
+++ b/wide-deep.ipynb
@@ -181,107 +181,107 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>76033</th>\n",
-       "      <td>76033</td>\n",
-       "      <td>Italy</td>\n",
-       "      <td>As its name suggests, Quater is a blend of fou...</td>\n",
-       "      <td>Quater</td>\n",
-       "      <td>86</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>Sicily &amp; Sardinia</td>\n",
-       "      <td>Sicilia</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>White Blend</td>\n",
-       "      <td>Firriato</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66490</th>\n",
-       "      <td>66490</td>\n",
-       "      <td>New Zealand</td>\n",
-       "      <td>Remarkably consistent in quality year after ye...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>90</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>Waipara Valley</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Chardonnay</td>\n",
-       "      <td>Pegasus Bay</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87654</th>\n",
-       "      <td>87654</td>\n",
+       "      <th>147097</th>\n",
+       "      <td>147098</td>\n",
        "      <td>US</td>\n",
-       "      <td>Intricate flavors of blackberries, cherries, r...</td>\n",
-       "      <td>Gary's Improv</td>\n",
-       "      <td>89</td>\n",
+       "      <td>Aged in American oak, with mostly similar vine...</td>\n",
+       "      <td>C'est Beaux</td>\n",
+       "      <td>88</td>\n",
        "      <td>35.0</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>Columbia Valley (WA)</td>\n",
+       "      <td>Columbia Valley</td>\n",
+       "      <td>Syrah</td>\n",
+       "      <td>Walter Dacon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44585</th>\n",
+       "      <td>44585</td>\n",
+       "      <td>US</td>\n",
+       "      <td>A good, strong, sturdy wine, filled with class...</td>\n",
+       "      <td>The Philanthropist Yountville Estate Vineyard</td>\n",
+       "      <td>88</td>\n",
+       "      <td>52.0</td>\n",
        "      <td>California</td>\n",
        "      <td>Napa Valley</td>\n",
        "      <td>Napa</td>\n",
-       "      <td>Zinfandel</td>\n",
-       "      <td>Clif Family</td>\n",
+       "      <td>Cabernet Sauvignon</td>\n",
+       "      <td>Markham</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>111941</th>\n",
-       "      <td>111941</td>\n",
-       "      <td>Italy</td>\n",
-       "      <td>Year after year, this is one of our favorite C...</td>\n",
-       "      <td>Grafin de la Tour</td>\n",
-       "      <td>88</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>Northeastern Italy</td>\n",
-       "      <td>Collio</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Chardonnay</td>\n",
-       "      <td>Villa Russiz</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5189</th>\n",
-       "      <td>5189</td>\n",
+       "      <th>38555</th>\n",
+       "      <td>38555</td>\n",
        "      <td>France</td>\n",
-       "      <td>This is a well made, fruit and tannin wine. Wi...</td>\n",
+       "      <td>Dry tannins dominate this wine. Pavie's style ...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>88</td>\n",
-       "      <td>20.0</td>\n",
+       "      <td>94</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Bordeaux</td>\n",
-       "      <td>Graves</td>\n",
+       "      <td>Saint-Émilion</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Bordeaux-style Red Blend</td>\n",
-       "      <td>Château le Bonnat</td>\n",
+       "      <td>Château Pavie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57566</th>\n",
+       "      <td>57566</td>\n",
+       "      <td>US</td>\n",
+       "      <td>100% Syrah from the same mix of vineyards as t...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>90</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>Walla Walla Valley (WA)</td>\n",
+       "      <td>Columbia Valley</td>\n",
+       "      <td>Syrah</td>\n",
+       "      <td>Watermill</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43906</th>\n",
+       "      <td>43906</td>\n",
+       "      <td>France</td>\n",
+       "      <td>The nose displays some funky notes alongside p...</td>\n",
+       "      <td>Les Princes Abbés</td>\n",
+       "      <td>85</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>Alsace</td>\n",
+       "      <td>Alsace</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pinot Blanc</td>\n",
+       "      <td>Domaines Schlumberger</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Unnamed: 0      country  \\\n",
-       "76033        76033        Italy   \n",
-       "66490        66490  New Zealand   \n",
-       "87654        87654           US   \n",
-       "111941      111941        Italy   \n",
-       "5189          5189       France   \n",
+       "        Unnamed: 0 country                                        description  \\\n",
+       "147097      147098      US  Aged in American oak, with mostly similar vine...   \n",
+       "44585        44585      US  A good, strong, sturdy wine, filled with class...   \n",
+       "38555        38555  France  Dry tannins dominate this wine. Pavie's style ...   \n",
+       "57566        57566      US  100% Syrah from the same mix of vineyards as t...   \n",
+       "43906        43906  France  The nose displays some funky notes alongside p...   \n",
        "\n",
-       "                                              description        designation  \\\n",
-       "76033   As its name suggests, Quater is a blend of fou...             Quater   \n",
-       "66490   Remarkably consistent in quality year after ye...                NaN   \n",
-       "87654   Intricate flavors of blackberries, cherries, r...      Gary's Improv   \n",
-       "111941  Year after year, this is one of our favorite C...  Grafin de la Tour   \n",
-       "5189    This is a well made, fruit and tannin wine. Wi...                NaN   \n",
+       "                                          designation  points  price  \\\n",
+       "147097                                    C'est Beaux      88   35.0   \n",
+       "44585   The Philanthropist Yountville Estate Vineyard      88   52.0   \n",
+       "38555                                             NaN      94    NaN   \n",
+       "57566                                             NaN      90   24.0   \n",
+       "43906                               Les Princes Abbés      85   15.0   \n",
        "\n",
-       "        points  price            province     region_1 region_2  \\\n",
-       "76033       86   32.0   Sicily & Sardinia      Sicilia      NaN   \n",
-       "66490       90   39.0      Waipara Valley          NaN      NaN   \n",
-       "87654       89   35.0          California  Napa Valley     Napa   \n",
-       "111941      88   60.0  Northeastern Italy       Collio      NaN   \n",
-       "5189        88   20.0            Bordeaux       Graves      NaN   \n",
+       "          province                 region_1         region_2  \\\n",
+       "147097  Washington     Columbia Valley (WA)  Columbia Valley   \n",
+       "44585   California              Napa Valley             Napa   \n",
+       "38555     Bordeaux            Saint-Émilion              NaN   \n",
+       "57566   Washington  Walla Walla Valley (WA)  Columbia Valley   \n",
+       "43906       Alsace                   Alsace              NaN   \n",
        "\n",
-       "                         variety             winery  \n",
-       "76033                White Blend           Firriato  \n",
-       "66490                 Chardonnay        Pegasus Bay  \n",
-       "87654                  Zinfandel        Clif Family  \n",
-       "111941                Chardonnay       Villa Russiz  \n",
-       "5189    Bordeaux-style Red Blend  Château le Bonnat  "
+       "                         variety                 winery  \n",
+       "147097                     Syrah           Walter Dacon  \n",
+       "44585         Cabernet Sauvignon                Markham  \n",
+       "38555   Bordeaux-style Red Blend          Château Pavie  \n",
+       "57566                      Syrah              Watermill  \n",
+       "43906                Pinot Blanc  Domaines Schlumberger  "
       ]
      },
      "execution_count": 3,
@@ -440,13 +440,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First Original Sample: As its name suggests, Quater is a blend of four Sicilian grape varieties (Grillo, Catarratto, Carricante and Zibibbo). It opens with thick aromas of pineapple, crushed clove, caramel and candied fruit. The creamy mouthfeel is capped by a touch of zesty spice.\n",
+      "First Original Sample: Aged in American oak, with mostly similar vineyard sources. The American oak, with more spice to the fruit, and less smoothness overall than the C'est Belle Bottling. Cherry and berry flavors abound; it's sturdy, solid and well-made. Just 170 cases produced.\n",
       "\n",
-      "First Sample after BoW (sparse representation truncated at the first 100 vocabulary terms): [0. 1. 1. 1. 1. 1. 0. 1. 0. 0. 0. 0. 1. 1. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 1. 0. 0. 1. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 1.]\n"
+      "First Sample after BoW (sparse representation truncated at the first 100 vocabulary terms): [0. 1. 1. 0. 0. 1. 0. 0. 1. 0. 1. 1. 0. 1. 0. 0. 0. 1. 0. 1. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0.]\n"
      ]
     }
    ],
@@ -482,7 +482,7 @@
     "\n",
     "The model will use the BoW representation for the *wine description* and One-Hot encoding representation for the *wine variety* as Features for the Wide Model (a 2 layers NN).\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/floydhub/regression-template/master/images/wide.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/floydhub/regression-template/master/images/wide.png\" width=\"350\" height=\"350\" align=\"center\"/>\n",
     "\n",
     "\n",
     "*Image from the [paper](https://arxiv.org/pdf/1606.07792.pdf)*"
@@ -550,10 +550,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First Original Sample: As its name suggests, Quater is a blend of four Sicilian grape varieties (Grillo, Catarratto, Carricante and Zibibbo). It opens with thick aromas of pineapple, crushed clove, caramel and candied fruit. The creamy mouthfeel is capped by a touch of zesty spice.\n",
+      "First Original Sample: Aged in American oak, with mostly similar vineyard sources. The American oak, with more spice to the fruit, and less smoothness overall than the C'est Belle Bottling. Cherry and berry flavors abound; it's sturdy, solid and well-made. Just 170 cases produced.\n",
       "\n",
-      "First Sample after Preprocessing for Embedding: [ 40  38 833 626   7   3  57   4 662 453 803   1  12 224   5 272  20   4\n",
-      " 150 420 371 284   1 300  13   2 140 124   7  31   3  99   4 352  35   0\n",
+      "First Sample after Preprocessing for Embedding: [362  10  33   5 789 135   2  33   5  59  35  11   2  13   1 509 312 122\n",
+      "   2 349  19   1  44   8  17 911 183   1  55 124  89 495 523   0   0   0\n",
       "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
       "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
       "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
@@ -588,7 +588,7 @@
     "\n",
     "This model build a liner layer at the top of the word embedding representaion of the wine description. \n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/floydhub/regression-template/master/images/deep.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/floydhub/regression-template/master/images/deep.png\" width=\"450\" height=\"450\" align=\"center\"/>\n",
     "\n",
     "*Image from the [paper](https://arxiv.org/pdf/1606.07792.pdf)*"
    ]
@@ -645,7 +645,7 @@
     "\n",
     "This model catenate the output of the previous models and build an additional linear layer at the top.\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/floydhub/regression-template/master/images/wide&deep.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/floydhub/regression-template/master/images/wide&deep.png\" width=\"500\" height=\"500\" align=\"center\"/>\n",
     "\n",
     "*Image from the [paper](https://arxiv.org/pdf/1606.07792.pdf)*"
    ]
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -737,22 +737,36 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "95646/95646 [==============================] - 9s 94us/step - loss: 1218.7875 - acc: 0.0281\n",
+      "95646/95646 [==============================] - 6s 66us/step - loss: 1135.1612 - acc: 0.0261\n",
       "Epoch 2/10\n",
-      "95646/95646 [==============================] - 6s 62us/step - loss: 1057.5545 - acc: 0.0327\n",
+      "95646/95646 [==============================] - 6s 61us/step - loss: 941.6884 - acc: 0.0326\n",
       "Epoch 3/10\n",
-      "95646/95646 [==============================] - 6s 58us/step - loss: 978.7590 - acc: 0.0345\n",
+      "95646/95646 [==============================] - 6s 62us/step - loss: 880.5090 - acc: 0.0344\n",
       "Epoch 4/10\n",
-      "95646/95646 [==============================] - 6s 58us/step - loss: 891.9354 - acc: 0.0355\n",
+      "95646/95646 [==============================] - 6s 61us/step - loss: 815.9317 - acc: 0.0345\n",
       "Epoch 5/10\n",
-      "95646/95646 [==============================] - 6s 58us/step - loss: 795.0603 - acc: 0.0366\n",
+      "95646/95646 [==============================] - 6s 63us/step - loss: 742.0993 - acc: 0.0358\n",
       "Epoch 6/10\n",
-      "95646/95646 [==============================] - 6s 60us/step - loss: 689.4046 - acc: 0.0383\n",
+      "95646/95646 [==============================] - 6s 64us/step - loss: 665.1590 - acc: 0.0362\n",
       "Epoch 7/10\n",
-      "95646/95646 [==============================] - 6s 59us/step - loss: 591.4843 - acc: 0.0389\n",
+      "95646/95646 [==============================] - 6s 64us/step - loss: 588.6375 - acc: 0.0372\n",
       "Epoch 8/10\n",
-      "66176/95646 [===================>..........] - ETA: 1s - loss: 495.3357 - acc: 0.0392"
+      "95646/95646 [==============================] - 6s 64us/step - loss: 518.4199 - acc: 0.0388\n",
+      "Epoch 9/10\n",
+      "95646/95646 [==============================] - 6s 63us/step - loss: 448.8580 - acc: 0.0386\n",
+      "Epoch 10/10\n",
+      "95646/95646 [==============================] - 6s 63us/step - loss: 389.8381 - acc: 0.0401\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras._impl.keras.callbacks.History at 0x7f6afc721be0>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -762,18 +776,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23912/23912 [==============================] - 1s 21us/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1050.6474193012727, 0.03379056540711363]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "combined_model.evaluate([description_bow_test, variety_test] + [test_embed], labels_test, batch_size=BATCH_SIZE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7377b410e34b41fa99d22c265d0acf51",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=1, description='# of test to evaluate/show', max=20, min=1), Output()), …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import interact\n",
     "from ipywidgets import widgets\n",
@@ -822,9 +869,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "abffcfd59e4b4e1c904e9c5c26d0d8a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Textarea(value='', description='test_description', placeholder='Type a wine Description …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import interact_manual\n",
     "from ipywidgets import widgets\n",
@@ -862,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
