--- a/wide-deep.ipynb
+++ b/wide-deep.ipynb
@@ -17,8 +17,6 @@
     "\n",
     "We will use the [Kaggle's Wine Reviews dataset](https://www.kaggle.com/zynicide/wine-reviews) for training our model. The dataset contains 10 columns and 150k rows of wine reviews.\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/floydhub/regression-template/master/images/dataset.png\" width=\"800\" height=\"800\" align=\"center\"/>\n",
-    "\n",
     "We will:\n",
     "\n",
     "- Preprocess text data for NLP\n",
@@ -29,7 +27,7 @@
     "\n",
     "### Instructions\n",
     "- To execute a code cell, click on the cell and press `Shift + Enter` (shortcut for Run).\n",
-    "- To learn more about Workspaces, check out the Getting Started Notebook.\n",
+    "- To learn more about Workspaces, check out the [Getting Started Notebook](get_started_workspace.ipynb).\n",
     "- **Tip**: *Feel free to try this Notebook with your own data and on your own super awesome regression task.*\n",
     "\n",
     "Now, let's get started! 🚀"
@@ -966,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
