--- a/wide-deep.ipynb
+++ b/wide-deep.ipynb
@@ -939,6 +939,13 @@
     "# Saving Model Weight\n",
     "combined_model.save_weights('models/wide_and_deep_weights.h5')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### That's all folks - don't forget to shutdown your workspace once you're done 🙂"
+   ]
   }
  ],
  "metadata": {
