fix spelling error

--- a/wide-deep.ipynb
+++ b/wide-deep.ipynb
@@ -373,7 +373,7 @@
     "re_tok = re.compile(f'([{string.punctuation}“”¨«»®´·º½¾¿¡§£₤‘’])')\n",
     "def tokenize(s): return re_tok.sub(r' \\1 ', s).split()\n",
     "\n",
-    "# Plot sentence by lenght\n",
+    "# Plot sentence by length\n",
     "plt.hist([len(tokenize(s)) for s in data['description'].values], bins=50)\n",
     "plt.title('Token per sentence')\n",
     "plt.xlabel('Len (number of token)')\n",
